# provet

./: .dockerignore  .env-template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  provet_cli.py  pyproject.toml  pytest.ini  setup.sh  test_file.json
api/: README.md  __init__.py  main.py
data/: consultation1.json  consultation2.json
provet/: __init__.py  __main__.py
provet/core/: __init__.py  app.py  data_models.py  io_manager.py  llm_service.py
provet/templates/: discharge_prompt.j2  system_message.j2
provet/utils/: __init__.py  config.py  template_engine.py
scripts/: cleanup.sh  setup_cli.sh  setup_dev.sh  setup_docker.sh  verify_setup.sh
solution/: consultation1_discharge.json  consultation2_discharge.json  test_discharge.json
tests/: README.md  conftest.py
tests/unit/api/: test_main.py
tests/unit/provet/: test_cli.py
tests/unit/provet/core/: test_app.py  test_data_models.py  test_io_manager.py  test_llm_service.py
tests/unit/provet/utils/: test_config.py  test_template_engine.py
